# dino_v2_ood_robustness

./: .gitignore  LICENSE  README.md  history_visualizations.ipynb  imagenet_variances.ipynb  ood_id_balanced_split.txt  ood_id_self_selected_labels.csv  pyproject.toml  visualize_statistics.ipynb
notebooks/: compute_embeddings.ipynb  compute_statistics.ipynb  example_diagrams_thesis.ipynb  example_pictures.ipynb  imagenet_tree_split.ipynb  linear_classifier.ipynb  visualize_statistics.ipynb
resources/: class_a_classes_b.csv  class_a_classes_b_thesis.csv  complete_comp_sequences_names_thesis.csv  imagenet_train_class_to_index_mapping.csv
scripts/: compute_inet_c_embeds.py  prepare_inet_1k_val_embeds.py
src/dinov2_ood_utilities/: custom_datasets.py  imagenet_tree.py
src/dinov2_ood_utilities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
storage/: acc_per_class.pkl  class_a_b_next_nearest.csv  class_a_class_b_names_timm_trans.csv  class_a_class_b_timm_trans.csv  class_a_classes_b.csv  class_a_classes_b_inet_names_new.csv  class_split.csv  compare_sequences.csv  complete_comp_sequences_latex.tex  complete_comp_sequences_names.csv  complete_comp_sequences_names_new.csv  imagenet_x_train_processed_classes_copy.pkl  inet_r_neares_inet_1k.csv  measures_and_ood_acc_results_normalized.csv  ood_acc_results.csv  softmax_diffs.csv  union_set_classes.txt
storage/wordnet_splits/: ood_id_balanced_split.csv  ood_id_self_selected.csv  ood_id_unbalacned_split.txt  ood_id_unbalanced_split.csv
