[build-system]
requires=["setuptools>=61.0", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="dinov2_ood_utilities"
version="0.1"
requires-python = ">=3.12.9" 
dependencies = [
    "torch==2.5.1",
    "tqdm==4.67.1",
    "timm==1.0.20", 
    "numpy==2.0.1",
    "seaborn==0.13.2",
    "pandas==2.3.0",
    "matplotlib==3.10.0",
    "pillow==12.0.0"
]

[tool.setuptools.packages.find]
where=["src"]